[project]
name = "meg"
version = "0.1.0"
authors = ["Kishorekumar Neelamegam <nkishore@megam.io>"]

[lib]
name = "meg"
path = "src/meg/lib.rs"

[dependencies]
curl = "0.2.8"
rust-turbo = " 0.2.0"
num_cpus = "0.1"


[dev-dependencies]
tempdir = "0.3.4"

[dependencies.hamcrest]

git = "https://github.com/carllerche/hamcrest-rust.git"

[[bin]]
name = "meg"
test = false
doc = false

[[test]]
name = "tests"

[[test]]
name = "resolve"
