[project]
name = "meg"
version = "0.1.0"
authors = ["Kishorekumar Neelamegam <nkishore@megam.io>"]

[lib]
name = "meg"
path = "src/meg/lib.rs"

[dependencies]
curl = "0.2.8"
rust_cli = "0.1.0"
num_cpus = "0.1"
docopt = "0.6.64"
env_logger = "0.3.1"
rustc-serialize = "0.3.14"
toml = "0.1.20"

[dev-dependencies]
tempdir = "0.3.4"

[dependencies.hamcrest]

git = "https://github.com/carllerche/hamcrest-rust.git"

[[bin]]
name = "meg"
test = false
doc = false

[[test]]
name = "tests"

[[test]]
name = "resolve"
